# mesh-kit

./: .cspell.json  .env  .envrc  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .ruff.toml  404.html  CHANGELOG.md  Makefile  README.md  Taskfile.yaml  cspell.config.yaml  cspell.json  environment.yaml  environment.yml  gen-chin.py  hello.py  hello1.py  hello2.py  index.html  interp-naive.py  interp.py  lsgm.py  mkdocs.yaml  objects.inv  pixi.toml  pyproject.toml  pyrightconfig.json  register.py  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
SUMMARY/: index.html
api/SUMMARY/: index.html
api/mkit/: index.html
api/mkit/cli/: index.html
api/mkit/creation/: index.html
api/mkit/ext/: index.html
api/mkit/io/: index.html
api/mkit/logging/: index.html
api/mkit/math/: index.html
api/mkit/ops/: index.html
api/mkit/physics/: index.html
api/mkit/plot/: index.html
api/mkit/typing/: index.html
api/mkit/utils/: index.html
docs/: SUMMARY.md
dvclive/: metrics.json
dvclive/plots/metrics/: loss.tsv
examples/orthognathic/: Makefile
examples/orthognathic/makefiles/: sphere.mk
examples/orthognathic/sphere/: Makefile
examples/orthognathic/src/: align.py  solve.py  tet2tri.py  tetgen.py  transform.py
examples/registration/src/: CT2mesh.py
examples/sculptor/: Makefile  README.md  Taskfile.yaml
examples/sculptor/cmd/: CT2mesh.py  CT_to_mesh.py  align.py  annotate_landmarks.py  pack.py  register.py  view_landmarks.py  view_records.py
examples/sculptor/config/: face.json  skull.json
examples/sculptor/data/: config.json
examples/sculptor/makefiles/: backup.mk  recover.mk  register.mk  template.mk
examples/sculptor/scripts/: manual.sh  rclone-pull.sh
examples/sculptor/task/: backup.yaml  register.yaml  template.yaml
examples/sculptor/taskfiles/: register.yaml  template.yaml
examples/shell/src/: create.py  tetgen.py
examples/tetgen/: Makefile  compose.py  create.py  export.py  plot_residual.py  solve.py  sphere.py
exp/2024-08-07-constitutive/: Makefile  README.md
exp/2024-08-07-constitutive/src/: main.py  plot.py
exp/2024-08-07-cylinder/: Makefile  dvc.yaml  params.yaml
exp/2024-08-07-cylinder/src/: gen.py  info.py  main.py  plot.py
exp/2024-08-07-linear-vs-hyper/src/: main.py
exp/2024-08-07/src/: linear-spsolve.py  linear.py  neo-hookean-2.py  plot-stress.py
exp/2024-08-14-twist/src/: gen.py
exp/2024-08-16/src/: main.py
exp/2024/2024-08-07-constitutive/: dvc.yaml
exp/2024/2024-08-07-linear-vs-hyper/: dvc.yaml
make/: install.mk
makefiles/: gen-typing.mk
megalinter-reports/: .cspell.json  megalinter-report.md
megalinter-reports/copy-paste/html/: index.html  jscpd-report.json
mesh_kit/: acvd.py  convert.py  log.py  tetgen.py  typing.py
mesh_kit/cli/: __init__.py  inspect.py  main.py
mesh_kit/cli/view/: __init__.py  attr.py  landmarks.py  register.py
mesh_kit/cmd/: __main__.py
mesh_kit/cmd/registration/: __main__.py  densify.py
mesh_kit/common/: cli.py  log.py  logging.py  path.py  testing.py
mesh_kit/examples/sculptor/: Makefile  README.md  Taskfile.yaml  cspell.config.yaml
mesh_kit/imagedata/: __init__.py
mesh_kit/io/: imagedata.py  landmark.py  landmarks.py  record.py  trimesh.py  trimesh_test.py
mesh_kit/io/ct/: __init__.py
mesh_kit/plot/: font.py
mesh_kit/polydata/: __init__.py  exchange.py
mesh_kit/pyvista/core/: grid.py
mesh_kit/pyvista/plotting/: __init__.py  text.py
mesh_kit/register/: config.py  nearest.py  nricp.py  utils.py
mesh_kit/registration/: config.py  correspondence.py  landmark.py  landmarks.py  nricp.py  utils.py  utils.pyi
mesh_kit/std/: functools.py  time.py
mesh_kit/transform/: similarity.py
mesh_kit/trimesh/: __init__.py  exchange.py  mesh_fix.py  points.py
reference/SUMMARY/: index.html
reference/mkit/: index.html
reference/mkit/_typing/: index.html
reference/mkit/array/: index.html
reference/mkit/cli/: index.html
reference/mkit/io/: index.html
reference/mkit/log/: index.html
reference/mkit/ops/: index.html
reference/mkit/physics/: index.html
reference/mkit/taichi/: index.html
reference/mkit/tetra/: index.html
schemas/: register.json  registration.json
scripts/: fullnames.py  gen-init.sh  gen-ref-pages.py  gen-typing.py
search/: search_index.json
src/benchmark/: test_sparse.py
src/mesh_kit/: __init__.py  cli.py  conftest.py  log.py  mask.py  points.py  typing.py
src/mesh_kit/io/: ele.py  node.py  smesh.py  utils.py
src/mesh_kit/linalg/: cg.py  cg_test.py
src/mesh_kit/physics/: elastic.py  mtm.py  mtm_test.py
src/mkit/: __init__.pyi  _log.py  _typing.py  _version.py  cli.py  log.py  logging.py  points.py  tetgen.py  transfer.py  typing.py
src/mkit/array/: __init__.py  index.py  mask.py  points.py
src/mkit/cli/: __init__.py  __init__.pyi  _config.py  _run.py
src/mkit/core/: __init__.pyi
src/mkit/creation/: __init__.pyi  tetmesh.py
src/mkit/ext/: __init__.py  __init__.pyi  _tetgen.py  _tetwild.py  igl.py
src/mkit/fem/: mtm.py
src/mkit/io/: __init__.py  __init__.pyi  _meshio.py  _pyvista.py  _register.py  _save.py  _taichi.py  _trimesh.py  _typing.py  types.py  typing.py
src/mkit/logging/: __init__.pyi  _handler.py  _init.py  _log_time.py
src/mkit/math/: __init__.py  __init__.pyi
src/mkit/ops/: __init__.pyi  mesh_fix.py  ray.py  tetgen.py
src/mkit/physics/: __init__.pyi  model.py  moduli.py  mtm.py
src/mkit/plot/: __init__.py  __init__.pyi  _camera.py
src/mkit/point/: __init__.py
src/mkit/pytorch3d/: transform.py
src/mkit/sparse/: __init__.py  typing.py
src/mkit/struct/: __init__.pyi
src/mkit/tetgen/: __init__.py
src/mkit/tetra/: __init__.py
src/mkit/trimesh/: __init__.py  _mesh_fix.py  ray.py
src/mkit/typing/: __init__.pyi  _fullname.py  _geometry.py  _is_instance_named.py  _isinstance.py  _types.py  _utils.py  array.py  (+3 more)
tasks/00-register/: Makefile  Makefile.1.mk
tasks/01-tetgen/: Makefile
tasks/02-simulation/: Makefile
tasks/03-eval/: Makefile
tasks/register/: Makefile
templates/wrap/: fast_wrapping.wrap
tools/: fullnames.py
(+536 files in other folders)
