[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "confz>=2.0.1,<3",
  "dvclive>=3.48.0,<4",
  "lazy-loader>=0.4,<0.5",
  "loguru>=0.7.2,<0.8",
  "matplotlib>=3.9.2,<4",
  "meshio[all]>=5.3.5,<6",
  "meshpy>=2022.1.3,<2023",
  "numba>=0.60.0,<0.61",
  "numpy>=2.0.2,<3",
  "pyvista>=0.44.1,<0.45",
  "scipy>=1.14.1,<2",
  "sparse>=0.15.4,<0.16",
  "taichi>=1.7.2,<2",
  "trimesh[all]>=4.4.7,<5",
]
description = "Add a short description here"
name = "mesh-kit"
requires-python = ">= 3.11"
version = "0.0.1"

[project.optional-dependencies]
cpu = ["jax>=0.4.31,<0.5"]
cuda12 = ["jax[cuda12]>=0.4.31,<0.5"]
dev = [
  "dvc>=3.54.1,<4",
  "icecream>=2.1.3,<3",
  "mkinit>=1.1.0,<2",
  "mypy>=1.11.2,<2",
  "pyright>=1.1.377,<2",
  "ruff>=0.6.2,<0.7",
]
test = ["pytest-benchmark>=4.0.0,<5", "pytest>=8.3.2,<9"]

[tool.hatch.build.targets.wheel]
packages = ["src/mkit"]

[tool.pixi.environments]
cpu = ["cpu", "dev", "test"]
cuda12 = ["cuda12", "dev", "test"]
default = ["cuda12", "dev", "test"]

[tool.pixi.feature.cpu.dependencies]

[tool.pixi.feature.cuda12.dependencies]

[tool.pixi.feature.cuda12.system-requirements]
cuda = "12"

[tool.pixi.feature.dev.dependencies]

[tool.pixi.project]
channel-priority = "disabled"
channels = ["anaconda", "conda-forge", "pytorch", "pytorch3d"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mesh-kit = { editable = true, path = "." }

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.35" }
linux = "6.5"

[tool.pixi.tasks]
test = "pytest"
